# bingo

./: .gitignore  README.md  mta.yaml  package-lock.json  package.json
backend/: Procfile  README.md  pyproject.toml  requirements.txt
backend/bingo/: app.py  db.py  generate.py  views.py
backend/data/: sessions.json
backend/vite/: package.json
bingo/: __init__.py  app.py  shell.py  views.py
bingo/templates/: base.html  bingo.html  welcome.html
data/: sessions.json
vite/: main.js  package.json
vite/src/: styles.css
