[tool.poetry]
name = "bingo"
version = "0.1.0"
description = ""
authors = ["Erik Woidt <erik.woidt@ordina.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
gunicorn = "^21.2.0"
cfenv = "^0.5.3"
hdbcli = "^2.18.24"
sqlalchemy-hana = "^0.5.0"
sqlalchemy = "^2.0.22"
flask-jwt-extended = "^4.5.3"
nltk = "^3.8.1"
flask-sqlalchemy = "^3.1.1"
flask-vite = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = 'bingo.generate:run'