[tool.poetry]
name = "bingo"
version = "0.1.0"
description = ""
authors = ["Erik Woidt <erik.woidt@ordina.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
gunicorn = "^21.2.0"
nltk = "^3.8.1"
flask-vite = "^0.3.5"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = 'bingo.generate:run'